Fixing dependencies, switching H2 for PostgreSQL